# marketpilot-ai

./: .dockerignore  .env.example  .gitignore  .npmrc  .pnpmfile.cjs  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
apps/strategy-engine/: Dockerfile  pyproject.toml  requirements.txt
apps/strategy-engine/app/: main.py
apps/strategy-engine/app/api/: backtests.py  live.py  market_maker.py  marketing.py  mm_scheduler.py  paper.py  risk.py  sports_arb.py  strategies.py  weather_arb.py
apps/strategy-engine/app/backtesting/: engine.py
apps/strategy-engine/app/core/: config.py
apps/strategy-engine/app/data/: market_data.py  noaa_client.py  odds_client.py
apps/strategy-engine/app/live_execution/: executor.py  polymarket_client.py
apps/strategy-engine/app/marketing/: content_agent.py  prelaunch_content.py  prompts.py  scheduler.py  telegram_approvals.py  typefully_client.py
apps/strategy-engine/app/models/: strategy.py
apps/strategy-engine/app/monitoring/: telegram_bot.py
apps/strategy-engine/app/paper_execution/: analysis.py  fill_models.py  simulator.py
apps/strategy-engine/app/risk/: engine.py  presets.py
apps/strategy-engine/app/strategies/: base.py  cross_market.py  market_maker.py  mean_reversion.py  momentum.py  orderbook_imbalance.py  registry.py  spread_capture.py  time_decay.py
apps/strategy-engine/app/strategies/sports/: __init__.py  arb.py  scanner.py
apps/strategy-engine/app/tests/: test_backtest.py  test_paper.py  test_risk.py  test_strategies.py
docs/: MARKETING_CONTENT_PACK.md  (+5 more)
(+119 files in other folders)
